# whalee-helper

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/cn/whale/helper/action/: BazelUpdateAction.java  NewGormModelAction.java  ProtocAction.java  RecursiveBazelUpdateAction.java
src/cn/whale/helper/bazel/: AbstractBazelGenerator.java  BasicGenerator.java  BasicWithTestGenerator.java  BazelUtils.java  LineBasedTemplateParser.java
src/cn/whale/helper/bazel/model/: BazelBuild.java  BazelBuildParser.java  Def.java  Load.java
src/cn/whale/helper/bazel/templates/: basic.bazel  basic_with_main.bazel  proto.bazel
src/cn/whale/helper/ui/: Notifier.java
src/cn/whale/helper/utils/: GoUtils.java  Joiner.java  Utils.java
src/main/java/cn/whale/helper/action/: Action0.java  BazelBuildAction.java  BazelUpdateAction.java  GblOssAction.java  GenGrpcHandlerAction.java  GoQualifiedNameProvider.java  NewGormModel2Action.java  NewGormModelAction.java  NewProtoAction.java  ProtocAction.java  RecursiveBazelUpdateAction.java  RepoGenCtx.java  SwagInitAction.java  TestDevGrpcAction.java  TestGinAction.java  TestGrpcAction.java  TestOpenplatformGrpcAction.java  TestProdGrpcAction.java  TestStageGrpcAction.java  TransGrpcAction.java  UploadProtoAction.java  proto.txt
src/main/java/cn/whale/helper/action/experimental/: DeployAction.java  DeployLocalAction.java  GblOssAction.java  GoBuildAction.java  TransGrpcAction.java  TsxShowVarValueAction.java
src/main/java/cn/whale/helper/action/service/: Dockerfile.tpl  NewServiceAction.java  build.sh.tpl  go.mod.tpl  handler.tpl  info.tpl  main.go.tpl  proto.go.mod.tpl  proto.tpl  readme.tpl
src/main/java/cn/whale/helper/bazel/: AbstractBazelGenerator.java  BazelUtils.java  MainGenerator.java  ProtoGenerator.java  TestOnlyGenerator.java
src/main/java/cn/whale/helper/bazel/model/: BazelBuild.java  Def.java  GoTest.java  ListParam.java  Param.java
src/main/java/cn/whale/helper/bazel/templates/: basic_with_test.bazel  main.bazel  proto.bazel  test_only.bazel
src/main/java/cn/whale/helper/dao/: GoDaoGenerator.java  dao_template.txt
src/main/java/cn/whale/helper/listener/: StartupListener.java  UpdateCheckService.java
src/main/java/cn/whale/helper/repo/: GoRepoGenerator.java  repo_template.txt
src/main/java/cn/whale/helper/repo2/: GoRepo2Generator.java  repo_template.txt
src/main/java/cn/whale/helper/template/: LineBasedTemplateRender.java  SimpleTemplateRender.java  TemplateBlockSection.java  TemplateLineSection.java  TemplateParam.java  TemplateSection.java  TemplateTest.java  test.txt
src/main/java/cn/whale/helper/ui/: NewProtoDialog.java  Notifier.java  SelectTableDialogWrapper.java  SimplePopupInput.java  TableModel.java  TableRowData.java  TableSelector.java
src/main/java/cn/whale/helper/ui/table/: FieldsTableModel.java  Reorderable.java  ReorderableTableModel.java  TableRowTransferHandler.java
src/main/java/cn/whale/helper/utils/: CloserHolder.java  ConfigUtil.java  DB.java  DbConfig.java  EtcdUtil.java  GoUtils.java  Holder.java  I18nUtil.java  IDEUtils.java  IconFontUtil.java  Joiner.java  NacosUtil.java  ProtoMeta.java  ProtoUtil.java  SimpleFileLogger.java  Utils.java
src/main/java/icons/: PluginIcons.java
src/test/java/: Testparse.java
