load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [${src_files}],
    importpath = "${relativepath}",
    visibility = ["//visibility:private"],
    deps = [$!{go_library_deps}],
)

go_binary(
    name = "${dirname}",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)