load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [${src_files}],
    importpath = "${relativepath}",
    visibility = ["//visibility:public"],
    deps = [$!{go_library_deps}],
)

go_test(
    name = "go_default_test",
    srcs = [${test_files}],
    embed = [":go_default_library"],
    deps = [$!{go_test_deps}],
)