load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = [${src_files}],
    importpath = "${relativepath}",
    visibility = ["//visibility:private"],
    deps = [$!{go_library_deps}],
)

go_binary(
    name = "${dirname}",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

#if $!{cfg}
filegroup(
    name = "conf_file",
    srcs = glob([
        "cfg/*.yaml",
    ]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "conf_tar",
    srcs = [":conf_file"],
    mode = "0o644",
)

#fi
# Include it in our base image as a tar.
container_image(
    name = "image",
    base = "@product_golang_base//image",
#if $!{cfg}
    tars = [":conf_tar"],
#fi
    files = [
        ":${dirname}",
#if $!{cfg}
        "//product/library/cfg:cfg_conf_file",
#fi
    ],
    mode = "0o777",
    directory = "/",
    cmd = [
        "./${dirname}",
        "$!{server_address}",
        "$!{registry}",
    ],
    workdir = "/",
    visibility = ["//visibility:private"],
)

container_push(
    name = "push_image",
    image = ":image",
    format = "Docker",
    registry = "registry-vpc.cn-shanghai.aliyuncs.com",
    repository = "meetwhale/${dirname}",
    visibility = ["//visibility:public"],
    tag = "{PRODUCT_IMAGE_TAG}",
)